<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rune_package</name>
  <version>0.0.0</version>
  <description>ROS2视频传输示例</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>
  <depend>ament_cmake</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
